2002-09-19  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (gtk_html_set_iframe_parent): return the depth of the
	frame stack.

	* gtkhtml.h: fixup prototype.

	* htmlframe.c (html_frame_init): limit max frame dpeth to 10.

	* htmliframe.c (html_iframe_init): limit max frame depth to 10.

2002-09-18  Radek Doulik  <rodo@ximian.com>

	* htmltextslave.c (calc_size): split just long words

2002-09-18  Larry Ewing  <lewing@ximian.com>

	* htmlpainter.c (html_painter_calc_text_width): limit alloca len
	and don't use strlen to fing the end of the string.
	(html_painter_draw_text): same.

2002-09-18  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (draw_text): use gnome_print_show_sized

	* htmltext.c (get_tags): write opening tags for next text to
	closing tags of this one
	(get_tags): simplified and corrected <font> tag saving, it's not
	optimal in space, but at least correct

2002-09-17  Radek Doulik  <rodo@ximian.com>

	* htmliframe.c (html_iframe_init): crop iframe height to 32767
	because X limitations, we have to fix it though

2002-09-16  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (parse_body): push/pop block here to fix
	<table><tr><td><font color=white>aaa</tr></td></table>
	(html_engine_selection_contains_link): new method
	(html_engine_selection_contains_object_type): new method

	* htmlengine-edit-cut-and-paste.c (append_flow): don't move whole
	flows, just object in them to preserve flow attributes

2002-09-13  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c: reimplemented font style parsing to allow non
	nested font style tags

2002-09-12  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (get_tags): don't get next/prev text objects across
	cluev boundaries
	(get_tags): fix </FONT> duplication and restoring right attributes

	* htmlengine.c (parse_a): don't push color for links
	(close_anchor): don't pop color
	(insert_text): use right default color for links

2002-09-09  Larry Ewing  <lewing@ximian.com>
